# Quaternion

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: ci.yml
client/: chatedit.cpp  chatedit.h  chatroomwidget.cpp  chatroomwidget.h  desktop_integration.h  dialog.cpp  dialog.h  htmlfilter.cpp  htmlfilter.h  linuxutils.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  networkconfigdialog.cpp  profiledialog.cpp  quaternionroom.cpp  quaternionroom.h  roomdialogs.cpp  systemtrayicon.cpp  thumbnailprovider.cpp  thumbnailprovider.h  timelinewidget.cpp  timelinewidget.h  userlistdock.cpp  userlistdock.h
client/models/: abstractroomordering.cpp  abstractroomordering.h  messageeventmodel.cpp  messageeventmodel.h  orderbytag.cpp  orderbytag.h  roomlistmodel.cpp  roomlistmodel.h  userlistmodel.cpp  userlistmodel.h
client/qml/: Avatar.qml  FileContent.qml  ImageContent.qml  ScrollFinisher.qml  Timeline.qml  TimelineItem.qml  TimelineTextEditSelector.qml
client/translations/: quaternion_de.ts  quaternion_en.ts  quaternion_en_GB.ts  quaternion_en_US.ts  quaternion_es.ts  quaternion_ru.ts
flatpak/: build.sh  io.github.quotient_im.Quaternion.yaml  setup_runtime.sh
linux/: io.github.quotient_im.Quaternion.appdata.xml
